unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/CMPL123CME__Clinical_Investigation__c.object-meta.xml
<CustomObject>
    <label>Clinical Investigation (Deprecated)</label>
    <nameField>
        <label>Title of Clinical Investigation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>