unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__action_treatment_patient_outcome__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__action_treatment_patient_outcome__c</fullName>
        <description>action/ treatment/patient outcome</description>
        <inlineHelpText>action/ treatment/patient outcome</inlineHelpText>
        <label>action/ treatment/patient outcome</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>