unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Assess_Relationship_to_Investi_device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assess_Relationship_to_Investi_device__c</fullName>
        <description>Assessment of Relationship to Investigational Device</description>
        <inlineHelpText>Assessment of Relationship to Investigational Device</inlineHelpText>
        <label>Assess. Relationship to Investi. device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Possibly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>