unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Assessment_of_Relationship_to_Procedure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assessment_of_Relationship_to_Procedure__c</fullName>
        <description>Assessment of Relationship
to Procedure</description>
        <inlineHelpText>Assessment of Relationship
to Procedure</inlineHelpText>
        <label>Assessment of Relationship to Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Possibly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>