unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__CIP_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__CIP_Number__c</fullName>
        <description>CIP Number</description>
        <inlineHelpText>CIP Number</inlineHelpText>
        <label>CIP Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>