unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Contact_Person__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_Person__c</fullName>
        <description>Contact Person name, Address, Email, Telephone Number</description>
        <inlineHelpText>Contact Person name, Address, Email, Telephone Number</inlineHelpText>
        <label>Contact Person Full Details</label>
        <type>TextArea</type>
    </CustomField>