unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Country__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>