unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Date_of_Event_Onset__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Event_Onset__c</fullName>
        <description>Date of Event Onset</description>
        <inlineHelpText>Date of Event Onset</inlineHelpText>
        <label>Date of Event Onset</label>
        <type>Date</type>
    </CustomField>