unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Date_of_Event_Resolution__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Event_Resolution__c</fullName>
        <description>Date of Event Resolution</description>
        <inlineHelpText>Date of Event Resolution</inlineHelpText>
        <label>Date of Event Resolution</label>
        <type>Date</type>
    </CustomField>