unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Date_of_Procedure_First_Use__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Procedure_First_Use__c</fullName>
        <description>Date of Procedure/ First Use</description>
        <inlineHelpText>Date of Procedure/ First Use</inlineHelpText>
        <label>Date of Procedure/ First Use</label>
        <type>Date</type>
    </CustomField>