unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Date_of_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Report__c</fullName>
        <description>Date of Report</description>
        <inlineHelpText>Date of Report</inlineHelpText>
        <label>Date of Report</label>
        <type>Date</type>
    </CustomField>