unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Date_Sponsor_received_Report_of_SAE__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_Sponsor_received_Report_of_SAE__c</fullName>
        <description>Date Sponsor received Report of SAE</description>
        <inlineHelpText>Date Sponsor received Report of SAE</inlineHelpText>
        <label>Date Sponsor received Report of SAE</label>
        <type>Date</type>
    </CustomField>