unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Description_of_event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Description_of_event__c</fullName>
        <description>Description of event</description>
        <inlineHelpText>Description of event</inlineHelpText>
        <label>Description of event</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>