unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Device_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Type__c</fullName>
        <description>Device Type</description>
        <inlineHelpText>Device Type</inlineHelpText>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>