unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__EUDAMED_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__EUDAMED_ID__c</fullName>
        <description>EUDAMED - ID</description>
        <inlineHelpText>EUDAMED - ID</inlineHelpText>
        <label>EUDAMED - ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>