unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Event_Organ_System__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Event_Organ_System__c</fullName>
        <description>Event: Organ System</description>
        <inlineHelpText>Event: Organ System</inlineHelpText>
        <label>Event: Organ System</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>