unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Event_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Event_Status__c</fullName>
        <description>Event Status:</description>
        <inlineHelpText>Event Status:</inlineHelpText>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Resolved with Sequelae</fullName>
                </value>
                <value>
                    <fullName>Ongoing/Death</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>