unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__MS_NCA_Reference_Numbers_for_all_partic__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MS_NCA_Reference_Numbers_for_all_partic__c</fullName>
        <description>MS+NCA Reference Numbers for all participating Countries</description>
        <inlineHelpText>MS+NCA Reference Numbers for all participating Countries</inlineHelpText>
        <label>MS+NCA Ref. Numbers</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>