unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__No_of_Invest_Devices_used_to_date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__No_of_Invest_Devices_used_to_date__c</fullName>
        <description>No. of Invest. Devices used to date</description>
        <inlineHelpText>No. of Invest. Devices used to date</inlineHelpText>
        <label>No. of Invest. Devices used to date</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>