unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Number_of_Patients_enrolled_to_date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Patients_enrolled_to_date__c</fullName>
        <description>Number of Patients enrolled to date(date of report)</description>
        <inlineHelpText>Number of Patients enrolled to date(date of report)</inlineHelpText>
        <label>No. of Patients enrolled to date</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>