unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Patient_ID_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_ID_Code__c</fullName>
        <description>Patient ID Code</description>
        <inlineHelpText>Patient ID Code</inlineHelpText>
        <label>Patient ID Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>