unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Reference_Member_State__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reference_Member_State__c</fullName>
        <description>Reference Member State</description>
        <inlineHelpText>Reference Member State</inlineHelpText>
        <label>Reference Member State</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>