unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Store_Old_Field_Values__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Store_Old_Field_Values__c</fullName>
        <description>Old Field Values</description>
        <inlineHelpText>Store Old Field Values</inlineHelpText>
        <label>Old Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>