unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Study_Center__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Study_Center__c</fullName>
        <description>Study Center</description>
        <inlineHelpText>Study Center</inlineHelpText>
        <label>Study Center</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>