unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Treatment_Arm__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Treatment_Arm__c</fullName>
        <description>Treatment Arm</description>
        <inlineHelpText>Treatment Arm</inlineHelpText>
        <label>Treatment Arm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigational Device</fullName>
                </value>
                <value>
                    <fullName>Control Group</fullName>
                </value>
                <value>
                    <fullName>Blinded</fullName>
                </value>
                <value>
                    <fullName>N.A.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>