unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/fields/CMPL123CME__Unanticipated_SADE_Yes_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Unanticipated_SADE_Yes_No__c</fullName>
        <description>Unanticipated SADE Yes/No</description>
        <inlineHelpText>Unanticipated SADE Yes/No</inlineHelpText>
        <label>Unanticipated SADE Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>