unpackaged/main/default/objects/CMPL123CME__Clinical_Investigation__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__EUDAMED_ID__c</columns>
        <columns>CMPL123CME__CIP_Number__c</columns>
        <columns>CMPL123CME__Date_of_Report__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>